--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -5,7 +5,7 @@ msg.search=Enter frame number for search
 msg.vendor=Enter vendor name
 msg.model=Enter model name
 msg.description=Enter description or other information
-msg.status=chose wanted status
+msg.status=Did your bike stolen?
 button.yes=yes
 button.no=no
 msg.saved=Report was saved
