--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,4 @@
-info=This bot was created to check the bike for theft. You can also report stolen bikes.\nThe check is based on the frame number.\nFor cooperation, you can write here: dmitrii.bragin90@gmail.com\n!!!Do not leave your bike unattended!!!
+info=This bot was created to check the bike for theft. You can also report stolen bikes.\nThe check is based on the frame number.\nFor cooperation, you can write here: dmitrii.bragin90@gmail.com\n!!!Do not leave your bike unattended!!!\n!!!Don't buy stolen bikes!!!
 msg.use=Use general menu
 msg.frame=Enter frame number
 msg.search=Enter frame number for search
