--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -10,3 +10,7 @@ button.yes=yes
 button.no=no
 msg.saved=Report was saved
 msg.deleted=Report was deleted
+msg.updated=Report was updated
+button.stolen=Stolen
+button.notstolen=Not Stolen
+button.delete=Delete
