added remote data

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -6,6 +6,7 @@ msg.vendor=Enter vendor name
 msg.model=Enter model name
 msg.description=Enter description or other information
 msg.status=Did your bike stolen?
+msg.stop=Your data was remoted.
 button.yes=yes
 button.no=no
 msg.saved=Report was saved
